Large commit: 	- initial slurm compatibility with 40k reads or less 	- integrated pipline-util 0.1.0 as deployment for misc pipeline tools 	- integrated tableToXlsx 0.1.0 as tool for tsv to XLSX conversion 	- varscan up and somewhat running with samtools 0.18 	- bugfixes galore for example renamed 'bsqr' > 'bqsr' 	- included easybuidjes for above mentiond tools where neccecary 	- upgraded varscan to version 2.4.0 	- fixes to the varscan protocol 	- using the correct $EBROOT variable to set tool-dirs 	- enabled garbage-collect with gatk tools because paralellGC requested infinite amount of cores 	- use the gatk decoy reference todo 	- check resource usage with large > 100m reads dataset